Added content to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 </head>
 
 <body>
+    <p>words</p>
+    <p>words</p>
+    <p>words</p>
+
+    <ul>
+        <li>words</li>
+        <li>words</li>
+        <li>words</li>
+        <li>words</li>
+    </ul>
+
+    <article>
+        <p>words</p>
+        <p>words</p>
+        <p>words</p>
+        <p>words</p>
+    </article>
     
 </body>
 
